; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/bcm63xx/extr_gpio.c_bcm63xx_gpio_set_direction.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/bcm63xx/extr_gpio.c_bcm63xx_gpio_set_direction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }

@GPIO_CTL_LO_REG = common dso_local global i32 0, align 4
@GPIO_CTL_HI_REG = common dso_local global i32 0, align 4
@bcm63xx_gpio_lock = common dso_local global i32 0, align 4
@GPIO_DIR_IN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_chip*, i32, i32)* @bcm63xx_gpio_set_direction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcm63xx_gpio_set_direction(%struct.gpio_chip* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.gpio_chip*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store %struct.gpio_chip* %0, %struct.gpio_chip** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.gpio_chip*, %struct.gpio_chip** %4, align 8
  %13 = getelementptr inbounds %struct.gpio_chip, %struct.gpio_chip* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp uge i32 %11, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = call i32 (...) @BUG()
  br label %18

18:                                               ; preds = %16, %3
  %19 = load i32, i32* %5, align 4
  %20 = icmp ult i32 %19, 32
  br i1 %20, label %21, label %25

21:                                               ; preds = %18
  %22 = load i32, i32* @GPIO_CTL_LO_REG, align 4
  store i32 %22, i32* %7, align 4
  %23 = load i32, i32* %5, align 4
  %24 = shl i32 1, %23
  store i32 %24, i32* %8, align 4
  br label %30

25:                                               ; preds = %18
  %26 = load i32, i32* @GPIO_CTL_HI_REG, align 4
  store i32 %26, i32* %7, align 4
  %27 = load i32, i32* %5, align 4
  %28 = sub i32 %27, 32
  %29 = shl i32 1, %28
  store i32 %29, i32* %8, align 4
  br label %30

30:                                               ; preds = %25, %21
  %31 = load i64, i64* %10, align 8
  %32 = call i32 @spin_lock_irqsave(i32* @bcm63xx_gpio_lock, i64 %31)
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @bcm_gpio_readl(i32 %33)
  store i32 %34, i32* %9, align 4
  %35 = load i32, i32* %6, align 4
  %36 = load i32, i32* @GPIO_DIR_IN, align 4
  %37 = icmp eq i32 %35, %36
  br i1 %37, label %38, label %43

38:                                               ; preds = %30
  %39 = load i32, i32* %8, align 4
  %40 = xor i32 %39, -1
  %41 = load i32, i32* %9, align 4
  %42 = and i32 %41, %40
  store i32 %42, i32* %9, align 4
  br label %47

43:                                               ; preds = %30
  %44 = load i32, i32* %8, align 4
  %45 = load i32, i32* %9, align 4
  %46 = or i32 %45, %44
  store i32 %46, i32* %9, align 4
  br label %47

47:                                               ; preds = %43, %38
  %48 = load i32, i32* %9, align 4
  %49 = load i32, i32* %7, align 4
  %50 = call i32 @bcm_gpio_writel(i32 %48, i32 %49)
  %51 = load i64, i64* %10, align 8
  %52 = call i32 @spin_unlock_irqrestore(i32* @bcm63xx_gpio_lock, i64 %51)
  ret i32 0
}

declare dso_local i32 @BUG(...) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @bcm_gpio_readl(i32) #1

declare dso_local i32 @bcm_gpio_writel(i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
